<resources>
    <string name="app_name">FYP Application - Waster</string>
    <string name="btn_add_bin_text">Add Bin</string>
    <string name="bin_name_text_hint">Bin Name</string>
    <string name="bin_latitude_text_hint">Bin Latitude</string>
    <string name="bin_longitude_text_hint">Bin Longitude</string>
    <string name="bin_photo_text_hint">Bin Photo</string>
    <string name="accessibility">Accessibility</string>
    <string name="bin_details">Bin Details</string>
    <string name="go_to_add_a_bin">Go to Add a Bin</string>
    <string name="add_a_bin_heading">Go to Add a Bin</string>
    <string name="google_maps_api_key">AIzaSyDxVFnLFnAYk109PjJd1mQvUzBV5-nfXhs</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_for_a_bin">Search for a Bin</string>
    <string name="accepted_materials">Accepted Materials</string>
    <string name="comments">Comments</string>
    <string name="btnCancelTxt">Cancel</string>
    <string name="btnDirectionsTxt">Directions</string>
    <string name="desc_a_picture_of_the_selected_bin">A Picture of the Selected Bin</string>
    <string name="btnTakePhoto">Take Photo</string>
    <string name="add_a_bin">Add a Bin</string>
    <string name="price">Price</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="metal">Metal</string>
    <string name="submit">Submit</string>
    <string name="drag_marker_to_change_location">Hold and drag marker to change bin location</string>
    <string name="confirm_bin_location">Confirm Bin Location</string>
    <string name="aa_battery">AA Battery</string>
    <string name="cardboard">Cardboard</string>
    <string name="clear_glass">Clear Glass</string>
    <string name="drink_can">Drink Can</string>
    <string name="plastic_bottle">Plastic Bottle</string>
    <string name="plastic_food_wrappers">Plastic Food Wrappers</string>
    <string name="plastic_overwrap_packaging">Plastic Overwrap Packaging</string>


    <string-array name="floor_array">
        <item>Ground Floor</item>
        <item>1st Floor</item>
        <item>2nd Floor</item>
        <item>3rd Floor</item>
        <item>4th Floor</item>
        <item>5th Floor</item>
        <item>6th Floor</item>
        <item>7th Floor</item>
    </string-array>

    <dimen name="bottom_nav_height">48dp</dimen>
</resources>
