<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bin_details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />


    <ImageView
        android:id="@+id/imgBinPic"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/desc_a_picture_of_the_selected_bin"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/amu_bubble_shadow" />

    <TextView
        android:id="@+id/txtBinName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id="@+id/txtBinMaterialsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accepted_materials"
        style="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/txtBinMaterials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtBinAccessibilityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessibility"
        style="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/txtBinAccessibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtBinCommentsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        style="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/txtBinComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelBinInfoModal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelTxt"
            android:textColor="#ffffff"
            android:backgroundTint="@color/colorSecondary"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/btnDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDirectionsTxt"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>