<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:isScrollContainer="false">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_bin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtBinName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bin_name_text_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accepted_materials"
        style="@style/TextAppearance.AppCompat.Body2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbxClearGlass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_glass"
            android:buttonTint="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/cbxCardboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cardboard"
            android:buttonTint="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/cbxAABattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aa_battery"
            android:buttonTint="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <CheckBox
            android:id="@+id/cbxDrinkCan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drink_can"
            android:buttonTint="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/cbxPlasticBottle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plastic_bottle"
            android:buttonTint="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/cbxPlasticFoodWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plastic_food_wrappers"
            android:buttonTint="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Accessibility"
        style="@style/TextAppearance.AppCompat.Body2"/>

    <RadioGroup
        android:id="@+id/accessibilityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/accessRadioBtnInside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Inside"
            android:buttonTint="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/accessRadioBtnOutside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Outside"
            android:buttonTint="@color/colorPrimary"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayoutBinAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBuildingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Building Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/price"
            style="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <EditText
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="0.0" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btnTakePhoto"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnCancelAddBin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/btnCancelTxt"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnSubmitBin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>